--- a/smartfeedback_client/package.json
+++ b/smartfeedback_client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "client": "file:",
     "next": "15.3.1",
     "react": "^19.0.0",
