--- a/smartfeedback_client/package.json
+++ b/smartfeedback_client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
     "client": "file:",
+    "lru-cache": "^11.1.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
